// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should pass on any css props 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
  border: 1px solid;
  border-radius: 0.125rem;
  cursor: pointer;
  border-color: #006eff;
  position: relative;
  margin-right: 0.75rem;
}

.glamor-1,
[data-glamor-1] {
  display: inline-block;
}

<Label
  alignItems="center"
  cursor="pointer"
  display="flex"
  error={false}
  flexDirection="row"
  onClick={undefined}
  userSelect="none"
>
  <div
    aria-checked="false"
    className="glamor-0"
    role="checkbox"
  />
  <div
    className="glamor-1"
  >
    Check me
  </div>
</Label>
`;

exports[`Checkbox should render a checkbox 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
  border: 1px solid;
  border-radius: 0.125rem;
  cursor: pointer;
  border-color: #006eff;
  position: relative;
  margin-right: 0.75rem;
}

.glamor-1,
[data-glamor-1] {
  display: inline-block;
}

<Label
  alignItems="center"
  cursor="pointer"
  display="flex"
  error={false}
  flexDirection="row"
  onClick={undefined}
  userSelect="none"
>
  <div
    aria-checked="false"
    className="glamor-0"
    role="checkbox"
  />
  <div
    className="glamor-1"
  >
    Check me
  </div>
</Label>
`;

exports[`Checkbox should render a disabled checkbox 1`] = `
.glamor-1,
[data-glamor-1] {
  display: inline-block;
}

.glamor-0,
[data-glamor-0] {
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
  border: 1px solid;
  border-radius: 0.125rem;
  cursor: not-allowed;
  border-color: #dfe0e2;
  position: relative;
  margin-right: 0.75rem;
}

<Label
  alignItems="center"
  cursor="not-allowed"
  display="flex"
  error={false}
  flexDirection="row"
  onClick={false}
  userSelect="none"
>
  <div
    aria-checked="false"
    className="glamor-0"
    role="checkbox"
  />
  <div
    className="glamor-1"
  >
    Check me
  </div>
</Label>
`;

exports[`Checkbox should render any label inside 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
  border: 1px solid;
  border-radius: 0.125rem;
  cursor: pointer;
  border-color: #006eff;
  position: relative;
  margin-right: 0.75rem;
}

.glamor-1,
[data-glamor-1] {
  display: inline-block;
}

<Label
  alignItems="center"
  cursor="pointer"
  display="flex"
  error={false}
  flexDirection="row"
  onClick={undefined}
  userSelect="none"
>
  <div
    aria-checked="false"
    className="glamor-0"
    role="checkbox"
  />
  <div
    className="glamor-1"
  >
    This is a good checkbox
  </div>
</Label>
`;

exports[`Checkbox should take an error state and pass it to the label 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
  border: 1px solid;
  border-radius: 0.125rem;
  cursor: pointer;
  border-color: #006eff;
  position: relative;
  margin-right: 0.75rem;
}

.glamor-1,
[data-glamor-1] {
  display: inline-block;
}

<Label
  alignItems="center"
  cursor="pointer"
  display="flex"
  error={true}
  flexDirection="row"
  onClick={undefined}
  userSelect="none"
>
  <div
    aria-checked="false"
    className="glamor-0"
    role="checkbox"
  />
  <div
    className="glamor-1"
  >
    Check me
  </div>
</Label>
`;
